<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.NewPostFragment">

    <data>

        <variable
            name="viewModel"
            type="com.collegecommunity.androidapp.viewmodels.NewPostViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileimage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/anonymous"
                        android:visibility="visible" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/username_here"
                            android:textColor="#040101"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/Tvtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/time_stamp"
                            android:textSize="15sp" />

                    </LinearLayout>


                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/post_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/anonymous_post_hint"
                        android:inputType="textMultiLine"
                        android:text="@={viewModel.postContent}" />
                </com.google.android.material.textfield.TextInputLayout>


                <ImageView
                    android:id="@+id/IvpostImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profileimage1"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.onAddImgClick()}"
                        android:paddingStart="16dp"
                        android:text="@string/add_image"
                        android:textAlignment="textStart"
                        android:textSize="18sp"
                        app:icon="@drawable/addimage"
                        app:iconSize="40dp"
                        app:iconTint="#000000"
                        app:iconTintMode="src_in" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:enabled="@{viewModel.contentValid}"
                        android:onClick="@{() -> viewModel.onPostClick()}"
                        android:paddingEnd="16dp"
                        android:text="@string/post"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        app:icon="@drawable/outline_send_24"
                        app:iconGravity="end"
                        app:iconSize="40dp"
                        app:iconTint="@color/material_on_background_emphasis_high_type" />


                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>