<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="user"
            type="com.collegecommunity.androidapp.models.User" />

        <variable
            name="post"
            type="com.collegecommunity.androidapp.models.Post" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileimage"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/anonymous"
                    android:visibility="visible" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/offlineimage"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="-18dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/anonymous"
                    android:visibility="gone"
                    app:civ_border_color="#bfbfbf"
                    app:civ_border_width="10dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/onlineimage"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="-18dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/anonymous"
                    android:visibility="visible"
                    app:civ_border_color="#05df29"
                    app:civ_border_width="10dp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@{user.username}"
                        android:textColor="#040101"
                        android:textSize="30sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/time_stamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/time_stamp"
                        android:textColor="@color/material_on_surface_emphasis_medium"
                        android:textSize="15sp" />

                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/post_image"
                android:contentDescription="@{post.postContent}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:imageUrl="@{post.postImageUri}" />

            <TextView
                android:id="@+id/post_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="serif"
                android:text="@{post.postContent}"
                android:textSize="25sp"
                android:textStyle="normal"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/like_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/like"
                    android:textAlignment="textStart"
                    android:textSize="12dp"
                    app:icon="@drawable/like"
                    app:iconSize="25dp"
                    app:iconTint="#00000000"
                    app:iconTintMode="add" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dislike_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dislike"
                    android:textAlignment="textStart"
                    android:textSize="12dp"
                    app:icon="@drawable/dislike"
                    app:iconSize="25dp"
                    app:iconTint="#00000000"
                    app:iconTintMode="add" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/message_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/message"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    app:icon="@drawable/message"
                    app:iconSize="25dp"
                    app:iconTint="#00000000"
                    app:iconTintMode="add" />


            </LinearLayout>

            <EditText
                android:id="@+id/post_comment_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:hint="Write a public comment...."
                android:visibility="gone" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>